# datasentience

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  convert-manifest.sh  deploy.sh  deploy.yaml  entrypoint.sh  pyproject.toml
data/: generate_data.py
docs/: ABOUT.md  ARCHITECTURE.md
src/: agent.py  config.py  indexer.py  main.py  multi_agent_system.py  startup_checks.py  vector_store.py
tests/: test_agent.py  test_claims.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
ui/src/: App.css  App.jsx
